# FasterTransformer

./: .gitignore
examples/pytorch/llama/: llama_example.py  start_ids.csv
examples/pytorch/llama/utils/: llama.py
src/fastertransformer/cutlass_extensions/include/cutlass_extensions/gemm/kernel/: fpA_intB_gemm.h
src/fastertransformer/cutlass_extensions/include/cutlass_extensions/gemm/threadblock/: dq_mma_multistage.h  dq_mma_pipelined.h
src/fastertransformer/cutlass_extensions/include/cutlass_extensions/gemm/warp/: mma_tensorop_dequantizer.h
src/fastertransformer/kernels/: decoder_masked_multihead_attention_utils.h  unfused_attention_kernels.cu
src/fastertransformer/kernels/cutlass_kernels/fpA_intB_gemm/: fpA_intB_gemm_template.h
src/fastertransformer/layers/: FfnLayer.cc  FfnLayer.h
src/fastertransformer/layers/attention_layers/: DecoderSelfAttentionLayer.cc  DecoderSelfAttentionLayer.h  GptContextAttentionLayer.cc  GptContextAttentionLayer.h
src/fastertransformer/models/llama/: Llama.cc  Llama.h  LlamaDecoderLayerWeight.cc
src/fastertransformer/th_op/: CMakeLists.txt
src/fastertransformer/th_op/llama/: CMakeLists.txt  LlamaOp.cc  LlamaOp.h
src/fastertransformer/utils/: memory_utils.cu  memory_utils.h
